appId: com.memento.app
---
- runFlow: ../util/launch.yml
- runFlow: ../util/add-assets.yml

# Navigate to Bulk Create page
- tapOn:
    id: fab-create-memento
- tapOn: Create multiple mementos

# Select photos from device library
# !!! OS specific behaviour, tailored to lab phone
- tapOn: Add photos from library
- tapOn:
    text: ".*Photo taken on.*"
    index: 0
- tapOn:
    text: ".*Photo taken on.*"
    index: 1
- tapOn: Done

# Verify FR-22: group images into keepsakes
- assertVisible: "Memento #1"
- assertVisible: "Memento #2"
- assertVisible:
    id: interactive-photo-card

# Accept background removal
- assertVisible:
    id: modal-background-removal
- tapOn:
    id: modal-background-removal-confirm

# Reject background removal
- assertVisible:
    id: modal-background-removal
- tapOn:
    id: modal-background-removal-decline

# Verify FR-23: Fill out each group's details
- tapOn: "Memento #1"
- runFlow:
    file: ../util/memento-form.yml
    env:
      CAPTION: Group number one
      LOCATION_PARTIAL: San Fr
      LOCATION_FULL: San Francisco, CA, USA
- tapOn:
    id: memento-form-submit-button

- tapOn: "Memento #2"
- runFlow:
    file: ../util/memento-form.yml
    env:
      CAPTION: Group number two
      LOCATION_PARTIAL: Tor
      LOCATION_FULL: Toronto, ON, Canada
- tapOn:
    id: memento-form-submit-button

# Submit the form
- tapOn: Create 2 Mementos

# Verify FR-24: Accept option to add the mementos to a new collection
- tapOn: Collection title
- inputText: Bulk Created Collection
- hideKeyboard

- tapOn: Add a caption
- inputText: Maestro created this collection via bulk create
- hideKeyboard

- tapOn: Create Collection

# Verify new collection created with mementos showing
- assertVisible: Bulk Created Collection

- assertVisible: Group number one
- assertVisible: ^\d{4}-\d{2}-01$
- assertVisible: San Francisco

- assertVisible: Group number two
- assertVisible: ^\d{4}-\d{2}-01$
- assertVisible: Toronto
