appId: com.memento.app
---
- runFlow: ../util/launch.yml

# Navigate to Edit Memento page
- tapOn:
    id: memento-card
- tapOn:
    id: view-memento-edit-button

# Check that cancelling doesn't save changes/edits
- copyTextFrom:
    id: memento-form-caption
- tapOn:
    id: memento-form-caption
- inputText: garbage text
- hideKeyboard
- tapOn:
    id: header-back-button
- assertVisible:
    id: view-memento-caption
    text: ${maestro.copiedText}
- tapOn:
    id: view-memento-edit-button
- assertVisible:
    id: memento-form-caption
    text: ${maestro.copiedText}

# Edit the memento fields

# Verify FR-31: remove all images and replace with a new
- repeat:
    while:
      visible:
        id: interactive-photo-card
    commands:
      - tapOn:
          id: interactive-photo-card-delete
- tapOn:
    id: photo-grid-add-button
- tapOn: Take a Photo
- tapOn:
    id: camera-capture-button
- assertVisible:
    id: interactive-photo-card
- tapOn:
    id: modal-background-removal-decline

# Verify FR-30/FR-33: edit form fields
- runFlow:
    file: ../util/memento-form.yml
    env:
      CAPTION: Edited caption
      LOCATION_PARTIAL: Edith
      LOCATION_FULL: Edithvale VIC, Australia
- tapOn: Save Changes

# Verify changes updated on view page
- assertVisible:
    id: view-memento-caption
    text: Edited caption

- assertVisible:
    id: view-memento-location
    text: Edithvale VIC, Australia
