appId: com.memento.app
---
# !!! Need to have at least one memento

- runFlow: ../util/launch.yml

# Wait for a memento card to appear
- assertVisible:
    id: memento-card

# Navigate to View Memento page
- tapOn:
    id: memento-card
    index: 0

# Click share button
- tapOn:
    id: share-memento-button
    retryTapIfNoChange: false

# Verify FR-54: Share to other apps sheet pops up
- runFlow: ../util/assert-share.yml
