appId: com.memento.app
tags:
  - util
---
# Verify device's native share actionsheet pops up
# (accessiblilityText below obtained using Maestro hierarchy for Pixel 6 emulator)
- assertVisible: ".*share.*"
- assertVisible: ".*preview.*"
# Exit sharing preview by tapping outside
- tapOn:
    point: 50%,10%
